vault-rails-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: vault-rails-svc
spec:
  selector:
    app: vault-dynamic-secrets-rails
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 3000
