vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: testkamiyamak
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev-vault.istyle.local
    http:
      paths:
      - backend:
          serviceName: vault
          servicePort: 8200
